[package]
name = "scrypt_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
openssl = "0.10.57"
openssl-sys = "0.9.93"
pbkdf2 = "0.12.2"
rand = "0.8.5"
scrypt = { version = "0.11.0", default-features = false }
sha2 = "0.10.7"
